--- a/style.css
+++ b/style.css
@@ -21,8 +21,6 @@ body {
 .world {
   overflow: hidden;
   position: relative;
-  width: 100%;
-  height: 200px;
 }
 
 .score {
@@ -58,4 +56,11 @@ body {
   left: 1%;
   height: 30%;
   bottom: calc(var(--bottom) * 1%);
+}
+
+.cactus {
+  position: absolute;
+  left: calc(var(--left) * 1%);
+  height: 30%;
+  bottom: 0;
 }
